--- a/archive/templates/archive/index.html
+++ b/archive/templates/archive/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="https://discord.com/api/oauth2/authorize?client_id=772154766188216382&redirect_uri=http%3A%2F%2Fdiscord.keithshintaku.com&response_type=code&scope=messages.read">production</a>
     <a href="https://discord.com/api/oauth2/authorize?client_id=772154766188216382&redirect_uri=http%3A%2F%2F127.0.0.1&response_type=code&scope=messages.read">Discord Read</a>
-    <a href="{{ discord_key }}"></a>
+    <p>{{ discord_key }}</p>
 </body>
 </html>
